fix: shift barcode up 30px for visual centering

--- a/app/barcode/barcode.module.css
+++ b/app/barcode/barcode.module.css
@@ -468,6 +468,7 @@
   max-width: 100%;
   height: auto;
   display: block;
+  margin-top: -30px;
 }
 
 .downloadRow {
